Indicator to show if calculated value is formed of measured stop gaps only

--- a/src/components/sidebar/routePathView/routePathInfoTab/calculatedInputField.scss
+++ b/src/components/sidebar/routePathView/routePathInfoTab/calculatedInputField.scss
@@ -18,4 +18,15 @@
             font-size: $smallFontSize;
         }
     }
+
+    .isMeasuredLength {
+        color: $successGreen;
+        font-weight: bold;
+        padding-left: 5px;
+    }
+    .isNotMeasuredLength {
+        color: yellow;
+        font-weight: bold;
+        padding-left: 5px;
+    }
 }
